# cu_geodesic

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cu  plotter.py
ex/: check.segm  hole.segm  hourglass.segm
inc/: cuda_error.hpp  io.hpp  kernel.hpp  matrix.hpp  segment.hpp
src/: cuda_error.cu  io.cpp  kernel.cu
